--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "amazon-buddy": "^2.2.15",
     "body-parser": "^1.19.0",
     "clsx": "^1.1.1",
     "cors": "^2.8.5",
@@ -19,6 +20,7 @@
     "material-ui-popup-state": "^1.6.1",
     "moment": "^2.29.0",
     "mysql": "^2.18.1",
+    "open-graph-scraper": "^4.7.0",
     "path": "^0.12.7",
     "react": "^16.13.1",
     "react-addons-update": "^15.6.2",
@@ -28,10 +30,11 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
     "react-swipeable-views": "^0.13.9",
-    "react-tooltip": "^4.2.7"
+    "react-tooltip": "^4.2.7",
+    "url-metadata": "^2.5.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node app.js",
     "test": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
