--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@date-io/moment": "^1.3.13",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
-    "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -17,10 +15,9 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "firebase": "^8.1.1",
-    "material-ui-popup-state": "^1.6.1",
-    "moment": "^2.29.0",
-    "mysql": "^2.18.1",
-    "open-graph-scraper": "^4.7.0",
+    "http": "0.0.1-security",
+    "material-ui-popup-state": "^1.7.1",
+    "monk": "^7.3.2",
     "path": "^0.12.7",
     "react": "^16.13.1",
     "react-addons-update": "^15.6.2",
@@ -29,8 +26,8 @@
     "react-image-file-resizer": "^0.3.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
-    "react-swipeable-views": "^0.13.9",
-    "react-tooltip": "^4.2.7",
+    "socket.io": "^3.0.3",
+    "socket.io-client": "^3.0.3",
     "url-metadata": "^2.5.0"
   },
   "scripts": {
