--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "amazon-asin": "^0.9.4",
     "amazon-buddy": "^2.2.15",
     "body-parser": "^1.19.0",
     "clsx": "^1.1.1",
@@ -18,10 +19,12 @@
     "http": "0.0.1-security",
     "material-ui-popup-state": "^1.7.1",
     "monk": "^7.3.2",
+    "nodemailer": "^6.4.16",
     "path": "^0.12.7",
     "react": "^16.13.1",
     "react-addons-update": "^15.6.2",
     "react-cookie": "^4.0.3",
+    "react-device-detect": "^1.14.0",
     "react-dom": "^16.13.1",
     "react-image-file-resizer": "^0.3.8",
     "react-router-dom": "^5.2.0",
