--- a/package.json
+++ b/package.json
@@ -3,40 +3,43 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.58",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "amazon-asin": "^0.9.4",
-    "amazon-buddy": "^2.2.15",
+    "amazon-buddy": "^2.2.37",
     "body-parser": "^1.19.0",
     "clsx": "^1.1.1",
+    "concurrently": "^6.2.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "firebase": "^8.1.1",
+    "firebase": "^8.6.8",
     "http": "0.0.1-security",
-    "material-ui-popup-state": "^1.7.1",
-    "mongodb": "^3.6.5",
-    "monk": "^7.3.2",
-    "nodemailer": "^6.4.16",
+    "json-stringify-pretty-compact": "^3.0.0",
+    "material-ui-popup-state": "^1.8.3",
+    "mongodb": "^3.6.9",
+    "monk": "^7.3.4",
+    "nodemailer": "^6.6.2",
+    "nodemon": "^2.0.7",
     "path": "^0.12.7",
-    "react": "^16.13.1",
-    "react-addons-update": "^15.6.2",
+    "react": "^16.14.0",
+    "react-addons-update": "^15.6.3",
     "react-cookie": "^4.0.3",
-    "react-device-detect": "^1.14.0",
-    "react-dom": "^16.13.1",
-    "react-image-file-resizer": "^0.3.8",
+    "react-device-detect": "^1.17.0",
+    "react-dom": "^16.14.0",
+    "react-image-file-resizer": "^0.3.11",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.3",
-    "socket.io": "^3.0.3",
-    "socket.io-client": "^3.0.3",
+    "react-scripts": "^3.4.4",
+    "socket.io": "^3.1.2",
+    "socket.io-client": "^3.1.3",
     "url-metadata": "^2.5.0"
   },
   "scripts": {
     "start": "node app.js",
-    "test": "react-scripts start",
+    "test": "concurrently \"nodemon app.js\" \"react-scripts start\"",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
   },
