--- a/package.json
+++ b/package.json
@@ -1,61 +1,63 @@
 {
-  "name": "giftamizer-node",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@material-ui/core": "^4.11.4",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.58",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "amazon-asin": "^0.9.4",
-    "amazon-buddy": "^2.2.37",
-    "body-parser": "^1.19.0",
-    "clsx": "^1.1.1",
-    "concurrently": "^6.2.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "firebase": "^8.6.8",
-    "http": "0.0.1-security",
-    "json-stringify-pretty-compact": "^3.0.0",
-    "material-ui-popup-state": "^1.8.3",
-    "mongodb": "^3.6.9",
-    "monk": "^7.3.4",
-    "nodemailer": "^6.6.2",
-    "nodemon": "^2.0.7",
-    "path": "^0.12.7",
-    "react": "^16.14.0",
-    "react-addons-update": "^15.6.3",
-    "react-cookie": "^4.0.3",
-    "react-device-detect": "^1.17.0",
-    "react-dom": "^16.14.0",
-    "react-image-file-resizer": "^0.3.11",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.4",
-    "socket.io": "^3.1.2",
-    "socket.io-client": "^3.1.3",
-    "url-metadata": "^2.5.0"
-  },
-  "scripts": {
-    "start": "node app.js",
-    "test": "concurrently \"nodemon app.js\" \"react-scripts start\"",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "giftamizer-node",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@material-ui/core": "^4.11.4",
+		"@material-ui/icons": "^4.11.2",
+		"@material-ui/lab": "^4.0.0-alpha.58",
+		"@testing-library/jest-dom": "^4.2.4",
+		"@testing-library/react": "^9.5.0",
+		"@testing-library/user-event": "^7.2.1",
+		"amazon-asin": "^0.9.4",
+		"amazon-buddy": "^2.2.37",
+		"body-parser": "^1.19.0",
+		"clsx": "^1.1.1",
+		"concurrently": "^6.2.0",
+		"cors": "^2.8.5",
+		"express": "^4.17.1",
+		"firebase": "^8.6.8",
+		"http": "0.0.1-security",
+		"json-stringify-pretty-compact": "^3.0.0",
+		"material-ui-popup-state": "^1.8.3",
+		"mongodb": "^3.6.9",
+		"monk": "^7.3.4",
+		"nodemailer": "^6.6.2",
+		"nodemon": "^2.0.7",
+		"path": "^0.12.7",
+		"react": "^16.14.0",
+		"react-addons-update": "^15.6.3",
+		"react-cookie": "^4.0.3",
+		"react-device-detect": "^1.17.0",
+		"react-dom": "^16.14.0",
+		"react-image-file-resizer": "^0.3.11",
+		"react-router-dom": "^5.2.0",
+		"react-scripts": "^3.4.4",
+		"socket.io": "^3.1.2",
+		"socket.io-client": "^3.1.3",
+		"url-metadata": "^2.5.0"
+	},
+	"scripts": {
+		"start": "node app.js",
+		"dev": "concurrently \"nodemon app.js\" \"react-scripts start\"",
+		"build": "react-scripts build",
+		"eject": "react-scripts eject",
+		"test": "react-scripts start"
+	},
+	"proxy": "http://localhost:8080",
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	}
 }
