--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"clsx": "^1.1.1",
 		"concurrently": "^6.2.0",
 		"cors": "^2.8.5",
+		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
 		"firebase": "^8.6.8",
 		"http": "0.0.1-security",
