--- a/package.json
+++ b/package.json
@@ -3,12 +3,19 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@emotion/react": "^11.5.0",
+		"@emotion/styled": "^11.3.0",
 		"@material-ui/core": "^4.11.4",
 		"@material-ui/icons": "^4.11.2",
 		"@material-ui/lab": "^4.0.0-alpha.58",
+		"@mui/icons-material": "^5.0.5",
+		"@mui/material": "^5.0.6",
+		"@mui/styles": "^5.0.2",
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
+		"@types/react": "^17.0.33",
+		"@types/react-dom": "^17.0.10",
 		"amazon-asin": "^0.9.4",
 		"amazon-buddy": "^2.2.37",
 		"body-parser": "^1.19.0",
