--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,14 @@
 
 # dependencies
 /node_modules
-package-lock.json
 /.pnp
 .pnp.js
 
 # testing
 /coverage
+
+# production
 /build
-.env
 
 # misc
 .DS_Store
@@ -21,3 +21,6 @@ package-lock.json
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# supabase local dev config
+# /supabase
