--- a/package.json
+++ b/package.json
@@ -3,45 +3,46 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@emotion/react": "^11.5.0",
-		"@emotion/styled": "^11.3.0",
-		"@material-ui/lab": "^4.0.0-alpha.58",
-		"@mui/icons-material": "^5.0.5",
-		"@mui/material": "^5.0.6",
-		"@mui/styles": "^5.0.2",
-		"@testing-library/jest-dom": "^4.2.4",
-		"@testing-library/react": "^9.5.0",
-		"@testing-library/user-event": "^7.2.1",
-		"@types/react": "^17.0.33",
-		"@types/react-dom": "^17.0.10",
-		"amazon-asin": "^0.9.4",
-		"amazon-buddy": "^2.2.37",
-		"body-parser": "^1.19.0",
-		"clsx": "^1.1.1",
-		"concurrently": "^6.2.0",
-		"cors": "^2.8.5",
-		"dotenv": "^10.0.0",
-		"express": "^4.17.1",
-		"firebase": "^8.6.8",
+		"@emotion/react": "11.5.0",
+		"@emotion/styled": "11.3.0",
+		"@material-ui/lab": "4.0.0-alpha.58",
+		"@mui/icons-material": "5.0.5",
+		"@mui/material": "5.0.6",
+		"@mui/styles": "5.0.2",
+		"@testing-library/jest-dom": "4.2.4",
+		"@testing-library/react": "9.5.0",
+		"@testing-library/user-event": "7.2.1",
+		"@types/react": "17.0.33",
+		"@types/react-dom": "17.0.10",
+		"amazon-asin": "0.9.4",
+		"amazon-buddy": "2.2.37",
+		"axios": "^1.2.1",
+		"body-parser": "1.19.0",
+		"clsx": "1.1.1",
+		"concurrently": "6.2.0",
+		"cors": "2.8.5",
+		"dotenv": "10.0.0",
+		"express": "4.17.1",
+		"firebase": "8.6.8",
 		"http": "0.0.1-security",
-		"json-stringify-pretty-compact": "^3.0.0",
-		"material-ui-popup-state": "^1.8.3",
-		"mongodb": "^3.6.9",
-		"monk": "^7.3.4",
-		"nodemailer": "^6.6.2",
-		"nodemon": "^2.0.7",
-		"path": "^0.12.7",
-		"react": "^16.14.0",
-		"react-addons-update": "^15.6.3",
-		"react-cookie": "^4.0.3",
-		"react-device-detect": "^1.17.0",
-		"react-dom": "^16.14.0",
-		"react-image-file-resizer": "^0.3.11",
-		"react-router-dom": "^5.2.0",
-		"react-scripts": "^3.4.4",
-		"socket.io": "^3.1.2",
-		"socket.io-client": "^3.1.3",
-		"url-metadata": "^2.5.0"
+		"json-stringify-pretty-compact": "3.0.0",
+		"material-ui-popup-state": "1.8.3",
+		"mongodb": "3.6.9",
+		"monk": "7.3.4",
+		"nodemailer": "6.6.2",
+		"nodemon": "2.0.7",
+		"path": "0.12.7",
+		"react": "16.14.0",
+		"react-addons-update": "15.6.3",
+		"react-cookie": "4.0.3",
+		"react-device-detect": "1.17.0",
+		"react-dom": "16.14.0",
+		"react-image-file-resizer": "0.3.11",
+		"react-router-dom": "5.2.0",
+		"react-scripts": "3.4.4",
+		"socket.io": "3.1.2",
+		"socket.io-client": "3.1.3",
+		"url-metadata": "2.5.0"
 	},
 	"scripts": {
 		"start": "node app.js",
