env template, admin lists, cleanup

--- a/.env.template
+++ b/.env.template
@@ -2,12 +2,12 @@ DANGEROUSLY_DISABLE_HOST_CHECK=true
 
 EMAIL_FROM_USER=noreply@email.com
 EMAIL_FROM_EMAIL=noreply@email.com
-EMAIL_TENANT_ID=azure_tenant_DI
+EMAIL_TENANT_ID=azure_tenant_id
 EMAIL_CLIENT_ID=azure_app_id
 EMAIL_CLIENT_SECRET=azure_app_secret
 
 MONGODB_DEV=GiftamizerDev
 MONGODB_PROD=Giftamizer
 
-MONGO_URI_DEV=mongodb://root:passwrod@dev_server:27017/GiftamizerDev
-MONGO_URI_PROD=mongodb://root:password@prod_server:27017/Giftamizer
+MONGO_URI_DEV=mongodb://root:passwrod@dev_server:27017/GiftamizerDev/?authSource=admin
+MONGO_URI_PROD=mongodb://root:password@prod_server:27017/Giftamizer/?authSource=admin
