--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"cors": "2.8.5",
 		"dotenv": "10.0.0",
 		"express": "4.17.1",
+		"flexsearch": "0.6.32",
 		"firebase": "8.6.8",
 		"http": "0.0.1-security",
 		"json-stringify-pretty-compact": "3.0.0",
