--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.5.0",
     "react-scripts": "^5.0.1",
     "typescript": "^4.9.4",
+    "use-supabase": "^2.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
