--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
+    "@mui/lab": "^5.0.0-alpha.114",
     "@mui/material": "^5.11.0",
+    "@supabase/realtime-js": "^2.1.0",
     "@supabase/supabase-js": "^2.2.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -18,13 +20,13 @@
     "dotenv": "^16.0.3",
     "notistack": "^2.0.8",
     "react": "^18.2.0",
-    "react-device-detect": "^2.2.2",
+    "react-cropper": "^2.1.8",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-email-validator": "^1.0.2",
     "react-router-dom": "^6.5.0",
     "react-scripts": "^5.0.1",
     "typescript": "^4.9.4",
-    "use-supabase": "^2.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
