--- a/functions-server/package.json
+++ b/functions-server/package.json
@@ -9,6 +9,7 @@
 	"dependencies": {
 		"@supabase/supabase-js": "^2.2.3",
 		"@types/node": "^18.11.18",
+		"axios": "^1.2.2",
 		"body-parser": "^1.20.1",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
