--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "dotenv": "^16.0.3",
+    "moment": "^2.29.4",
     "notistack": "^2.0.8",
     "react": "^18.2.0",
     "react-cropper": "^2.1.8",
@@ -26,6 +27,7 @@
     "react-email-validator": "^1.0.2",
     "react-router-dom": "^6.5.0",
     "react-scripts": "^5.0.1",
+    "react-transition-group": "^4.4.5",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
