--- a/package.json
+++ b/package.json
@@ -1,58 +1,61 @@
 {
-  "name": "giftamizer",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@mui/icons-material": "^5.11.0",
-    "@mui/lab": "^5.0.0-alpha.114",
-    "@mui/material": "^5.11.0",
-    "@supabase/realtime-js": "^2.1.0",
-    "@supabase/supabase-js": "^2.2.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.10",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "dotenv": "^16.0.3",
-    "moment": "^2.29.4",
-    "notistack": "^2.0.8",
-    "react": "^18.2.0",
-    "react-cropper": "^2.1.8",
-    "react-dom": "^18.2.0",
-    "react-dropzone": "^14.2.3",
-    "react-email-validator": "^1.0.2",
-    "react-router-dom": "^6.5.0",
-    "react-scripts": "^5.0.1",
-    "react-transition-group": "^4.4.5",
-    "typescript": "^4.9.4",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "giftamizer",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@emotion/react": "^11.11.1",
+		"@emotion/styled": "^11.11.0",
+		"@fontsource/roboto": "^5.0.4",
+		"@mui/icons-material": "^5.13.7",
+		"@mui/lab": "^5.0.0-alpha.135",
+		"@mui/material": "^5.13.7",
+		"@supabase/realtime-js": "^2.1.0",
+		"@supabase/supabase-js": "^2.2.1",
+		"@tanstack/react-query": "^4.29.19",
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/react": "^13.4.0",
+		"@testing-library/user-event": "^13.5.0",
+		"@types/jest": "^27.5.2",
+		"@types/node": "^16.18.10",
+		"@types/react": "^18.0.26",
+		"@types/react-dom": "^18.0.9",
+		"dotenv": "^16.0.3",
+		"moment": "^2.29.4",
+		"notistack": "^2.0.8",
+		"react": "^18.2.0",
+		"react-cropper": "^2.1.8",
+		"react-dom": "^18.2.0",
+		"react-dropzone": "^14.2.3",
+		"react-email-validator": "^1.0.2",
+		"react-router-dom": "^6.5.0",
+		"react-router-dom-last-location": "^0.2.5",
+		"react-scripts": "^5.0.1",
+		"react-transition-group": "^4.4.5",
+		"typescript": "^4.9.4",
+		"web-vitals": "^2.1.4"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	}
 }
