item card, import stuff and metadata grabber

--- a/functions-server/package.json
+++ b/functions-server/package.json
@@ -11,10 +11,12 @@
 		"@types/node": "^18.11.18",
 		"axios": "^1.2.2",
 		"body-parser": "^1.20.1",
+		"cheerio": "^1.0.0-rc.12",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"firebase-scrypt": "^2.2.0",
+		"node-fetch": "^3.3.2",
 		"nodemon": "^2.0.20",
 		"pg": "^8.8.0",
 		"ts-node": "^10.9.1",
