--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"react-scripts": "^5.0.1",
 		"react-transition-group": "^4.4.5",
 		"typescript": "^4.9.4",
+		"use-debounce": "^9.0.4",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
