--- a/firebase-user-import/package.json
+++ b/firebase-user-import/package.json
@@ -8,16 +8,23 @@
 		"delete": "ts-node delete.ts"
 	},
 	"dependencies": {
-		"@supabase/supabase-js": "^2.2.3",
+		"@supabase/supabase-js": "^2.33.1",
 		"@types/node": "^18.11.18",
+		"axios": "^1.5.0",
+		"cheerio": "^1.0.0-rc.12",
 		"dotenv": "^16.0.3",
+		"fs": "^0.0.1-security",
 		"moment": "^2.29.4",
+		"node-fetch": "^3.3.2",
 		"nodemon": "^2.0.20",
 		"pg": "^8.8.0",
 		"ts-node": "^10.9.1",
-		"typescript": "^4.9.4"
+		"typescript": "^4.9.4",
+		"util": "^0.12.5",
+		"uuid": "^9.0.0"
 	},
 	"devDependencies": {
-		"@types/pg": "^8.6.6"
+		"@types/pg": "^8.6.6",
+		"@types/uuid": "^9.0.3"
 	}
 }
