--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@types/node": "^16.18.10",
 		"@types/react": "^18.0.26",
 		"@types/react-dom": "^18.0.9",
+		"buffer": "^6.0.3",
 		"dotenv": "^16.0.3",
 		"moment": "^2.29.4",
 		"notistack": "^2.0.8",
