--- a/functions-server/package.json
+++ b/functions-server/package.json
@@ -16,8 +16,12 @@
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"firebase-scrypt": "^2.2.0",
+		"fs": "^0.0.1-security",
+		"handlebars": "^4.7.8",
 		"node-fetch": "^3.3.2",
+		"nodemailer": "^6.9.5",
 		"nodemon": "^2.0.20",
+		"path": "^0.12.7",
 		"pg": "^8.8.0",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.9.4"
@@ -25,6 +29,7 @@
 	"devDependencies": {
 		"@types/cors": "^2.8.13",
 		"@types/express": "^4.17.15",
+		"@types/nodemailer": "^6.4.9",
 		"@types/pg": "^8.6.6"
 	}
 }
