fix lists group chips

--- a/firebase-user-import/.env-example
+++ b/firebase-user-import/.env-example
@@ -1,5 +1,5 @@
 # Supabase
-SUPABASE_URL=https://api.giftamizer.com
+SUPABASE_URL=https://giftamizer.com
 SUPABASE_SERVICE_ROLE_KEY=key
 
 # Postgres
