--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"react-router-dom": "^6.5.0",
 		"react-router-dom-last-location": "^0.2.5",
 		"react-scripts": "^5.0.1",
+		"react-snowfall": "^1.2.1",
 		"react-transition-group": "^4.4.5",
 		"typescript": "^4.9.4",
 		"use-debounce": "^9.0.4",
@@ -43,6 +44,7 @@
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
 	},
+	"proxy": "http://192.168.1.50:8000",
 	"eslintConfig": {
 		"extends": [
 			"react-app",
