--- a/Mobile/flutter/giftamizer/ios/Runner/Info.plist
+++ b/Mobile/flutter/giftamizer/ios/Runner/Info.plist
@@ -54,7 +54,7 @@
 		<string>Editor</string>
 		<key>CFBundleURLSchemes</key>
 		<array>
-			<string>com.explodedcode.giftamizer</string>
+			<string>com.giftamizer.giftamizer</string>
 		</array>
 		</dict>
 	</array>
