--- a/Mobile/flutter/giftamizer/linux/CMakeLists.txt
+++ b/Mobile/flutter/giftamizer/linux/CMakeLists.txt
@@ -7,7 +7,7 @@ project(runner LANGUAGES CXX)
 set(BINARY_NAME "giftamizer")
 # The unique GTK application identifier for this application. See:
 # https://wiki.gnome.org/HowDoI/ChooseApplicationID
-set(APPLICATION_ID "com.explodedcode.giftamizer")
+set(APPLICATION_ID "com.giftamizer.giftamizer")
 
 # Explicitly opt in to modern CMake behaviors to avoid warnings with recent
 # versions of CMake.
