--- a/Mobile/flutter/giftamizer/macos/Runner/Configs/AppInfo.xcconfig
+++ b/Mobile/flutter/giftamizer/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = giftamizer
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.explodedcode.giftamizer
+PRODUCT_BUNDLE_IDENTIFIER = com.giftamizer.giftamizer
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2023 com.example. All rights reserved.
