--- a/email/.env
+++ b/email/.env
@@ -1,3 +1,3 @@
 CLIENT_ID=fe316f5c-d282-4062-b3c7-9fd04f0cab59
-CLIENT_SECRET=v1A8Q~LBcgwypLOXOuKutdrFsUyHASsN5YNGYbaN
+CLIENT_SECRET=kqG8Q~wV9bJLukb3cjVPte6SYevz56iRW0poZaiK
 TENANT_ID=675dde45-3435-460c-a54f-5bcc8b4851bd
