--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
 		"@mui/icons-material": "^5.13.7",
 		"@mui/lab": "^5.0.0-alpha.135",
 		"@mui/material": "^5.13.7",
+		"@mui/x-date-pickers": "^6.18.1",
+		"@reactour/mask": "^1.1.0",
 		"@supabase/realtime-js": "^2.1.0",
 		"@supabase/supabase-js": "^2.2.1",
 		"@tanstack/react-query": "^4.29.19",
@@ -21,6 +23,8 @@
 		"@types/react-dom": "^18.0.9",
 		"buffer": "^6.0.3",
 		"dotenv": "^16.0.3",
+		"gift-exchange": "^4.0.1",
+		"js-yaml": "^4.1.0",
 		"moment": "^2.29.4",
 		"notistack": "^2.0.8",
 		"react": "^18.2.0",
@@ -28,7 +32,6 @@
 		"react-dom": "^18.2.0",
 		"react-dropzone": "^14.2.3",
 		"react-email-validator": "^1.0.2",
-		"react-joyride": "^2.5.5",
 		"react-router-dom": "^6.5.0",
 		"react-router-dom-last-location": "^0.2.5",
 		"react-scripts": "^5.0.1",
@@ -64,6 +67,8 @@
 		]
 	},
 	"devDependencies": {
-		"@types/lodash": "^4.14.197"
+		"@types/js-yaml": "^4.0.9",
+		"@types/lodash": "^4.14.197",
+		"@types/moment-holiday": "^1.5.4"
 	}
 }
