--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@types/jest": "^27.5.2",
 		"@types/node": "^16.18.10",
 		"@types/react": "^18.0.26",
+		"@types/react-copy-to-clipboard": "^5.0.7",
 		"@types/react-dom": "^18.0.9",
 		"buffer": "^6.0.3",
 		"concurrently": "^8.2.2",
@@ -32,6 +33,7 @@
 		"notistack": "^2.0.8",
 		"query-string": "^8.1.0",
 		"react": "^18.2.0",
+		"react-copy-to-clipboard": "^5.1.0",
 		"react-cropper": "^2.1.8",
 		"react-dom": "^18.2.0",
 		"react-dropzone": "^14.2.3",
