--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"express": "^4.18.2",
 		"gift-exchange": "^4.0.1",
 		"http-proxy-middleware": "^2.0.6",
+		"jest": "^27.5.1",
 		"js-yaml": "^4.1.0",
 		"moment": "^2.29.4",
 		"notistack": "^2.0.8",
@@ -50,7 +51,7 @@
 	"scripts": {
 		"start": "concurrently \"node proxy.js\" \"react-scripts start\"",
 		"build": "react-scripts build",
-		"test": "react-scripts test",
+		"test": "jest",
 		"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
@@ -72,8 +73,11 @@
 		]
 	},
 	"devDependencies": {
+		"@babel/core": "^7.23.6",
+		"@babel/preset-env": "^7.23.6",
 		"@types/js-yaml": "^4.0.9",
 		"@types/lodash": "^4.14.197",
-		"@types/moment-holiday": "^1.5.4"
+		"@types/moment-holiday": "^1.5.4",
+		"babel-jest": "^29.7.0"
 	}
 }
