--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"dependencies": {
 		"@emotion/react": "^11.11.1",
 		"@emotion/styled": "^11.11.0",
+		"@faker-js/faker": "^8.3.1",
 		"@fontsource/roboto": "^5.0.4",
 		"@mui/icons-material": "^5.13.7",
 		"@mui/lab": "^5.0.0-alpha.135",
