--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "giftamizer",
-	"version": "0.1.0",
+	"version": "5.1.2",
 	"private": true,
 	"dependencies": {
 		"@emotion/react": "^11.11.1",
@@ -17,11 +17,6 @@
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
-		"@types/jest": "^27.5.2",
-		"@types/node": "^16.18.10",
-		"@types/react": "^18.0.26",
-		"@types/react-copy-to-clipboard": "^5.0.7",
-		"@types/react-dom": "^18.0.9",
 		"buffer": "^6.0.3",
 		"concurrently": "^8.2.2",
 		"dotenv": "^16.0.3",
@@ -48,7 +43,7 @@
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
-		"start": "concurrently \"node proxy.js\" \"react-scripts start\"",
+		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
@@ -74,6 +69,11 @@
 	"devDependencies": {
 		"@types/js-yaml": "^4.0.9",
 		"@types/lodash": "^4.14.197",
-		"@types/moment-holiday": "^1.5.4"
+		"@types/moment-holiday": "^1.5.4",
+		"@types/jest": "^27.5.2",
+		"@types/node": "^16.18.10",
+		"@types/react": "^18.0.26",
+		"@types/react-copy-to-clipboard": "^5.0.7",
+		"@types/react-dom": "^18.0.9"
 	}
 }
